# CodeDelivery

./: .clinerules  .windsurfrules  AGENTS.md  llms.txt
build-ship-pipeline/: .env.example  CLAUDE.md  pyproject.toml
build-ship-pipeline/config/: budget.yaml  prices.yaml
build-ship-pipeline/docker/: docker-compose.yml
build-ship-pipeline/docker/monitoring/: grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo-config.yaml
build-ship-pipeline/docs/: architecture.html  setup-guide.html
build-ship-pipeline/eval/: __init__.py  compare.py  metrics.py  report.py  runner.py
build-ship-pipeline/eval/cases/: sample_cases.yaml
build-ship-pipeline/eval/judges/: __init__.py  llm_judge.py
build-ship-pipeline/src/: config.py  graph.py  guardrails.py  main.py  state.py
build-ship-pipeline/src/agents/: base.py  outputs.py
build-ship-pipeline/src/db/: __init__.py  repo.py  schema.sql
build-ship-pipeline/src/governance/: __init__.py  dynamic.py  governed.py  guard.py
build-ship-pipeline/src/nodes/: approval.py  halt.py  report.py
build-ship-pipeline/src/observability/: __init__.py  logger.py  tracing.py
build-ship-pipeline/src/rag/: __init__.py  base.py  bm25.py  chunker.py  dense.py  graph.py  guards.py  hybrid.py  hyde.py  indexer.py  instrument.py  multi_query.py  recipes.py  reranker.py
build-ship-pipeline/tests/unit/: test_governance.py  test_rag.py  test_rag_advanced.py  test_state.py
build-ship-pipeline/ui/: Dockerfile  nginx.conf
build-ship-pipeline/ui/backend/: app.py  auth.py  dependencies.py  middleware.py  models.py  runs.py  seed.py  ws.py  (+1 more)
(+70 files in other folders)
