[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build-ship-pipeline"
version = "0.1.0"
description = "Multi-agent LangGraph pipeline that builds, ships, and reviews software"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "psycopg[binary,pool]>=3.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation>=0.49b0",
    "tiktoken>=0.8.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    # UI backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "litellm>=1.50.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "testcontainers[postgresql]>=4.0.0",
]
pgvector = [
    "pgvector>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -v"
